* <span class="label label-success">Added</span> @org.eclipse.sirius.diagram.ui.business.api.image.ITreeImagesContentProvider@ has been added to allow the implementation of an @org.eclipse.jface.viewers.ITreeContentProvider@ that can be used by @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelectionDialog@ to retrieve image information.
* <span class="label label-info">Modified</span> @org.eclipse.sirius.diagram.ui@ now depends on GMF Runtime 1.14.0, which itself uses Apache Batik 1.14.0 to support SVG (both rendering SVG images on diagrams and exporting diagrams to SVG files). As a result, exporting diagrams to PDF is not supported anymore (as GMF Runtime 1.14.0 itself has dropped support for this).
* <span class="label label-info">Modified</span> @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelector@ has been modified to support multiple image selection. The enum @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelector.SelectionMode@ can be used to define the selection mode supported: @MONO_SELECTION@ for a single selection or @MULTI_SELECTION@ for a multiple selection. The method @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelector.selectImages(EObject, SelectionMode)@ has been updated to handle this selection mode as a parameter and now returns the list of selected images as a @List<String>@.
* <span class="label label-info">Modified</span> The class @org.eclipse.sirius.diagram.ui.business.api.image.WorkspaceImageSelector@ has been modified to implement the interface @ImageSelector@ and the update of its @ImageSelector.selectImages(EObject, SelectionMode)@ method.
* <span class="label label-info">Modified</span> @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelectorService@ has been split in a new lighter @ImageSelectorService@ which aims to get an @ImageSelector@. The other methods have been moved to @org.eclipse.sirius.diagram.ui.business.api.image.WorkspaceImageHelper@.
