@@ -48,6 +48,8 @@ h4. Changes in @org.eclipse.sirius.diagram.ui@
 ** <span class="label label-success">Added</span> @org.eclipse.sirius.diagram.ui.business.api.image.WorkspaceImageHelper.updateWorkspacePath(BasicLabelStyle, String)@, which was previously @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelectorService.updateWorkspacePath(BasicLabelStyle, String)@.
 * <span class="label label-success">Added</span> @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelectionDialog@ has been added to replace the @org.eclipse.sirius.common.ui.tools.api.resource.WorkspaceResourceDialogWithFilter@ dialog which was used to select a background image for a diagram element. @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelectionDialog@ now provides a new simpler and more complete UI.
 * <span class="label label-success">Added</span> @org.eclipse.sirius.diagram.ui.business.api.image.ITreeImagesContentProvider@ has been added to allow the implementation of an @org.eclipse.jface.viewers.ITreeContentProvider@ that can be used by @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelectionDialog@ to retrieve image information.
+* <span class="label label-success">Added</span> @org.eclipse.sirius.diagram.ui.business.api.image.ImageFiltersUtils@ provides the filter used by the TreeViewer in the @ImageSelectionDialog@ as well as various utility methods to identify the supported image formats.
+* <span class="label label-success">Added</span> @org.eclipse.sirius.diagram.ui.business.api.image.GallerySelectable@ provides an implementation of @org.eclipse.sirius.diagram.ui.tools.internal.dialogs.widgets.gallery.Gallery@ which allows to select items in the gallery. This is mostly used in tests. @GallerySelectable@ allows to use the @org.eclipse.sirius.diagram.ui.tools.internal.dialogs.widgets.gallery.Gallery@ in @ImageSelectionDialog@ implementations.
 * <span class="label label-info">Modified</span> @org.eclipse.sirius.diagram.ui@ now depends on GMF Runtime 1.14.0, which itself uses Apache Batik 1.14.0 to support SVG (both rendering SVG images on diagrams and exporting diagrams to SVG files). As a result, exporting diagrams to PDF is not supported anymore (as GMF Runtime 1.14.0 itself has dropped support for this).
 * <span class="label label-info">Modified</span> @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelector@ has been modified to support multiple image selection. The enum @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelector.SelectionMode@ can be used to define the selection mode supported: @MONO_SELECTION@ for a single selection or @MULTI_SELECTION@ for a multiple selection. The method @org.eclipse.sirius.diagram.ui.business.api.image.ImageSelector.selectImages(EObject, SelectionMode)@ has been updated to handle this selection mode as a parameter and now returns the list of selected images as a @List<String>@.
 * <span class="label label-info">Modified</span> The class @org.eclipse.sirius.diagram.ui.business.api.image.WorkspaceImageSelector@ has been modified to implement the interface @ImageSelector@ and the update of its @ImageSelector.selectImages(EObject, SelectionMode)@ method.
